# backend/src/controllers/reading.ts
@@ -1,6 +1,5 @@
 import { Express } from 'express';
 import { authenticate, RequestUser } from '../middleware/authenticate';
-import { upload } from '../middleware/upload';
 import { ISensorReadingRepository } from '../data/sensorReadingRepository';
 import { IEnrolmentRepository } from '../data/enrolmentRepository';
 import { Observability } from '../o11y';
@@ -18,29 +17,6 @@ export function createReadingController(
   observability: Observability,
   sensorReadingQueue?: Queue<SensorReadingJobData>,
 ) {
-  app.post('/v1/reading', authenticate, async (req, res) => {
-    const parsed = ClientSensorReading.safeParse(req.body);
-    if (!parsed.success) {
-      return res
-        .status(400)
-        .send({ error: 'Invalid request', details: parsed.error });
-    }
-
-    const enrolment = await enrolmentRepository.getEnrolmentById(
-      (req.user as RequestUser).enrolmentId,
-    );
-    if (!enrolment) {
-      return res.status(403).send({ error: 'Enrolment not found' });
-    }
-
-    const reading = await sensorReadingRepository.createSensorReading(
-      enrolment.id,
-      parsed.data,
-    );
-
-    res.json(reading);
-  });
-
   app.post('/v1/reading/batch', authenticate, async (req, res) => {
     const parsed = ReadingBatchRequestBody.safeParse(req.body);
     if (!parsed.success) {
@@ -100,26 +76,6 @@ export function createReadingController(
       res.status(500).send({ error: 'Error creating readings' });
     }
   });
-
-  app.post(
-    '/v1/reading/:readingId/file',
-    authenticate,
-    upload.single('file'),
-    async (req, res) => {
-      if (!req.file) {
-        return res.status(400).send({ error: 'No file uploaded' });
-      }
-      const uploaded = await sensorReadingRepository.createFile(
-        parseInt(req.params.readingId),
-        {
-          filename: req.file.filename,
-          path: req.file.path,
-        },
-      );
-
-      res.json(uploaded);
-    },
-  );
 
   observability.logger.info('loaded reading controller');
 }
